fix: Fix the hero-section gap

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,7 +28,7 @@ section {
 
 .hero-section__title {
   font-size: 120px;
-  margin-bottom: -50px;
+  margin-bottom: -30px;
 }
 
 .hero-section__subtitle {
